adding elements to the page to make a functional form entries

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./Assets/CSS/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -26,13 +26,100 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p id="currentDay" class="lead">Day of the week: <br/></p>
     </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
+    <div class="container" id="container">
+      <div class="timeEntry">
+      <form id="calendarInput">8AM
+        <label for="calendarAppointment">Available</label><br>
+        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+    <div class="timeEntry">
+      <form id="calendarInput">9AM
+        <label for="calendarAppointment">Available</label><br>
+        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+    <div class="timeEntry">
+      <form id="calendarInput">10AM
+        <label for="calendarAppointment">Available</label><br>
+        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+    <div class="timeEntry">
+      <form id="calendarInput">11AM
+        <label for="calendarAppointment">Available</label><br>
+        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+    <div class="timeEntry">
+      <form id="calendarInput">12AM
+        <label for="calendarAppointment">Available</label><br>
+        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+    <div class="timeEntry">
+      <form id="calendarInput">1PM
+        <label for="calendarAppointment">Available</label><br>
+        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+    <div class="timeEntry">
+      <form id="calendarInput">2PM
+        <label for="calendarAppointment">Available</label><br>
+        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+    <div class="timeEntry">
+      <form id="calendarInput">3PM
+        <label for="calendarAppointment">Available</label><br>
+        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+    <div class="timeEntry">
+      <form id="calendarInput">4PM
+        <label for="calendarAppointment">Available</label><br>
+        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+    <div class="timeEntry">
+      <form id="calendarInput">5PM
+        <label for="calendarAppointment">Available</label><br>
+        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+    <div class="timeEntry">
+      <form id="calendarInput">6PM
+        <label for="calendarAppointment">Available</label><br>
+        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+    <div class="timeEntry">
+      <form id="calendarInput">7PM
+        <label for="calendarAppointment">Available</label><br>
+        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
+    <script src="./Assets/JS/script.js"></script>
   </body>
 </html>
