update input tags and buttons

--- a/index.html
+++ b/index.html
@@ -30,88 +30,100 @@
     </header>
     <div class="container" id="container">
       <div class="timeEntry">
-      <form id="calendarInput">8AM
+      <form class="calendarInput"id="eight">8AM
         <label for="calendarAppointment">Available</label><br>
-        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
-        <input type="submit" value="Submit">
+        <input type="text" id="calApptEight" name="fname" value="Enter appointment details here.">
+        <button class="btn btn-info">Add Item</button>
       </form>
+      <ul class="calendarListEight"></ul>
     </div>
     <div class="timeEntry">
-      <form id="calendarInput">9AM
+      <form class="calendarInput"id="nine">9AM
         <label for="calendarAppointment">Available</label><br>
-        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
-        <input type="submit" value="Submit">
+        <input type="text" id="calApptNine" name="fname" value="Enter appointment details here.">
+        <button class="btn btn-info">Add Item</button>
       </form>
+      <ul class="calendarListNine"></ul>
     </div>
     <div class="timeEntry">
-      <form id="calendarInput">10AM
+      <form class="calendarInput"id="ten">10AM
         <label for="calendarAppointment">Available</label><br>
-        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
-        <input type="submit" value="Submit">
+        <input type="text" id="calApptTen" name="fname" value="Enter appointment details here.">
+        <button class="btn btn-info">Add Item</button>
       </form>
+      <ul class="calendarListTen"></ul>
     </div>
     <div class="timeEntry">
-      <form id="calendarInput">11AM
+      <form class="calendarInput"id="eleven">11AM
         <label for="calendarAppointment">Available</label><br>
-        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
-        <input type="submit" value="Submit">
+        <input type="text" id="calApptEleven" name="fname" value="Enter appointment details here.">
+        <button class="btn btn-info">Add Item</button>
       </form>
+      <ul class="calendarListEleven"></ul>
     </div>
     <div class="timeEntry">
-      <form id="calendarInput">12AM
+      <form class="calendarInput"id="twelve">12AM
         <label for="calendarAppointment">Available</label><br>
-        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
-        <input type="submit" value="Submit">
+        <input type="text" id="calApptTwelve" name="fname" value="Enter appointment details here.">
+        <button class="btn btn-info">Add Item</button>
       </form>
+      <ul class="calendarListTwelve"></ul>
     </div>
     <div class="timeEntry">
-      <form id="calendarInput">1PM
+      <form class="calendarInput"id="one">1PM
         <label for="calendarAppointment">Available</label><br>
-        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
-        <input type="submit" value="Submit">
+        <input type="text" id="calApptOne" name="fname" value="Enter appointment details here.">
+        <button class="btn btn-info">Add Item</button>
       </form>
+      <ul class="calendarListOne"></ul>
     </div>
     <div class="timeEntry">
-      <form id="calendarInput">2PM
+      <form class="calendarInput"id="two">2PM
         <label for="calendarAppointment">Available</label><br>
-        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
-        <input type="submit" value="Submit">
+        <input type="text" id="calApptTwo" name="fname" value="Enter appointment details here.">
+        <button class="btn btn-info">Add Item</button>
       </form>
+      <ul class="calendarListTwo"></ul>
     </div>
     <div class="timeEntry">
-      <form id="calendarInput">3PM
+      <form class="calendarInput"id="three">3PM
         <label for="calendarAppointment">Available</label><br>
-        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
-        <input type="submit" value="Submit">
+        <input type="text" id="calApptThree" name="fname" value="Enter appointment details here.">
+        <button class="btn btn-info">Add Item</button>
       </form>
+      <ul class="calendarListThree"></ul>
     </div>
     <div class="timeEntry">
-      <form id="calendarInput">4PM
+      <form class="calendarInput"id="four">4PM
         <label for="calendarAppointment">Available</label><br>
-        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
-        <input type="submit" value="Submit">
+        <input type="text" id="calApptFour" name="fname" value="Enter appointment details here.">
+        <button class="btn btn-info">Add Item</button>
       </form>
+      <ul class="calendarListFour"></ul>
     </div>
     <div class="timeEntry">
-      <form id="calendarInput">5PM
+      <form class="calendarInput"id="five">5PM
         <label for="calendarAppointment">Available</label><br>
-        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
-        <input type="submit" value="Submit">
+        <input type="text" id="calApptFive" name="fname" value="Enter appointment details here.">
+        <button class="btn btn-info">Add Item</button>
       </form>
+      <ul class="calendarListFive"></ul>
     </div>
     <div class="timeEntry">
-      <form id="calendarInput">6PM
+      <form class="calendarInput"id="six">6PM
         <label for="calendarAppointment">Available</label><br>
-        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
-        <input type="submit" value="Submit">
+        <input type="text" id="calApptSix" name="fname" value="Enter appointment details here.">
+        <button class="btn btn-info">Add Item</button>
       </form>
+      <ul class="calendarListSix"></ul>
     </div>
     <div class="timeEntry">
-      <form id="calendarInput">7PM
+      <form class="calendarInput"id="seven">7PM
         <label for="calendarAppointment">Available</label><br>
-        <input type="text" id="calAppt" name="fname" value="Enter appointment details here.">
-        <input type="submit" value="Submit">
+        <input type="text" id="calApptSeven" name="fname" value="Enter appointment details here.">
+        <button class="btn btn-info">Add Item</button>
       </form>
+      <ul class="calendarListSeven"></ul>
     </div>
     </div>
 
