--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <p class="lead">A simple calendar app for scheduling your work day</p>
         <p id="currentDay" class="lead">Day of the week: <br /></p>
         <h2>
-          Current Time &amp; Date: <br />
-          <span id="time-display">00:00:00</span>
+          Current Time: <br />
+          <span id="time-display"></span>
         </h2>
       </header>
       </div>
@@ -38,7 +38,7 @@
       <div class="table-responsive col">
         <table class="table table-bordered custom-table" id="calendar-table">
         <thead>
-            <tbody>
+          <tbody id="calendar-display">
               <tr>
                 <td >8AM<input class="time-block, row" id="eight-input" type="text" placeholder=""> <button class="saveBtn float-right">Save</button>  </th>
               </td>  
@@ -75,89 +75,19 @@
         </tbody>
           </div>
       
-        <tbody id="calendar-display"></tbody>
+        </tbody>
       </table>
-      <!-- </div>
-      <div
-        class="modal fade custom-modal"
-        id="project-modal"
-        tabindex="-1"
-        role="dialog"
-        aria-labelledby="project-modal-form"
-      >
-        <!-- <div
-    class="modal fade custom-modal"
-    id="project-modal"
-    tabindex="-1"
-    role="dialog"
-    aria-labelledby="project-modal-form"
-    aria-hidden="true"
-  > -->
-        <!-- <div class="modal-dialog modal-lg modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="project-modal-form">
-                Book an appointment
-              </h5>
-              <button
-                type="button"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close"
-              >
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <form id="appointment-form">
-              <div class="modal-body">
-                <div class="form-group">
-                  <label for="appointment-details-input">Enter Appointment Details</label>
-                  <input
-                    type="text"
-                    id="appointment-details-input"
-                    class="form-control"
-                    placeholder="Enter the appointment details"
-                    required
-                  />
-                </div>
-              </div>
-
-              <div class="form-group">
-                <label for="calendar-input">Appointment Time</label>
-                <select class="form-control" id="calendar-input">
-                  <option selected disabled>Select Appointment time:</option>
-                  <option value="eight">8AM</option>
-                  <option value="nine">9AM</option>
-                  <option value="ten">10AM</option>
-                  <option value="eight">11AM</option>
-                  <option value="nine">12PM</option>
-                  <option value="ten">1PM</option>
-                  <option value="eight">2PM</option>
-                  <option value="nine">3PM</option>
-                  <option value="ten">4PM</option>
-                  <option value="ten">5PM</option>
-                </select>
-                <button
-                  type="button"
-                  class="btn btn-secondary"
-                  data-dismiss="modal"
-                >
-                  Close
-                </button>
-                <button type="submit" class="btn custom-btn">
-                  Book Appointment
-                </button> -->
-              <!-- </div> -->
-              <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-              <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-              <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-              <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
-              <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
-              <script src="./Assets/JS/script.js"></script>
+      </div>
             </form>
           </div>
         </div>
       </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
+    <script src="./Assets/JS/script.js"></script>
   </body>
 </html>
